--- a/app/views/heros/new.html.erb
+++ b/app/views/heros/new.html.erb
@@ -11,7 +11,7 @@
   <!-- Bootstrap icons-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
 </head>
-<body class="d-flex flex-column h-100">
+<body class="bg-black d-flex flex-column h-100">
   <main class="flex-shrink-0">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-black">
@@ -31,7 +31,7 @@
     </nav>
 
     <!-- Hero Form Section -->
-    <section class="container mt-4">
+    <section class="text-white container mt-4">
       <h1>Add a hero to rent</h1>
       <br>
 
