--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,12 +25,17 @@
                             <li class="nav-item"><a class="nav-link" href="/heros">Heroes</a></li>
                             <li class="nav-item"><a class="nav-link" href="/">Profile</a></li>
                             <li class="nav-item"><a class="nav-link" href="/">FAQ</a></li>
+                            <% if user_signed_in? %>
+                <li class="nav-item"><%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link" %></li>
+              <% else %>
+                <li class="nav-item"><%= link_to "Login", new_user_session_path, class: "nav-link" %></li>
+              <% end %>
                         </ul> 
                     </div>
                 </div>
             </nav>
             <!-- Header-->
-            <header class="bg-black py-5 glow-effect">
+            <header class="bg-black py-5">
                 <div class="container px-5">
                     <div class="row gx-5 align-items-center justify-content-center">
                         <div class="col-lg-8 col-xl-7 col-xxl-6">
@@ -39,7 +44,7 @@
                                 <p class="lead fw-normal text-white-50 mb-4">Quickly rent & start your next adventure!</p>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                                     <%= link_to "Rent now!", "/heros", class: "rounded-4 btn btn-primary btn-lg px-4 me-sm-3 custom-btn", title: "Rent now!" %>
-                                    <a class="rounded-4 btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
+                                    <a class="rounded-4 btn btn-outline-light btn-lg px-4 " href="#!">Learn More</a>
                                 </div>
                             </div>
                         </div>
