--- a/app/views/heros/index.html.erb
+++ b/app/views/heros/index.html.erb
@@ -36,7 +36,7 @@
             .card-body::-webkit-scrollbar {
                 display: none;
             }
-            
+
             .form{
 
                   position: relative;
@@ -66,7 +66,7 @@
               }
 
               .left-pan i{
-                
+
                 padding-left: 10px;
               }
 
@@ -88,13 +88,13 @@
                 <div class="container">
                   <div class="d-flex justify-content-start mb-3 position-fixed bottom-0 start-0 p-5">
                     <%= link_to new_hero_path, class: "rounded-5 btn btn-outline-light btn-sm px-3 btn-circle", title: "Create" do %>
-                        <i class="fas fa-plus"></i>
+                        <i class="fas fa-plus">Create</i>
                     <% end %>
                 </div>
                   <div class="row">
                     <% @heros.each do |hero| %>
                       <div class="col-md-3 mb-3">
-                      <div class="card rounded-5" style="background-color: #ffffff;">                                   
+                      <div class="card rounded-5" style="background-color: #ffffff;">
                           <%= image_tag "hero#{rand(1..16)}.png", class: "card-img-top rounded-top rounded-top-5", alt: "#{hero.name} Image" %>
                           <div class="card-body p-3 d-flex flex-column justify-content-between" style="height: 250px; overflow-y: auto; font-family: 'Poppins', sans-serif;"> <!-- Set a fixed height for the card body, adjust as needed -->
                               <div>
