--- a/app/views/heros/index.html.erb
+++ b/app/views/heros/index.html.erb
@@ -94,8 +94,9 @@
                   <div class="row">
                     <% @heros.each do |hero| %>
                       <div class="col-md-3 mb-3">
-                      <div class="card rounded-5" style="background-color: #ffffff;">                                   
-                          <%= image_tag "hero#{rand(1..16)}.png", class: "card-img-top rounded-top rounded-top-5", alt: "#{hero.name} Image" %>
+                      <div class="card rounded-5" style="background-color: #ffffff;">
+                      <% hero_image_id = hero.id %>                             
+                      <%= image_tag "hero#{hero_image_id % 16 + 1}.png", class: "card-img-top rounded-top rounded-top-5", alt: "#{hero.name} Image" %>
                           <div class="card-body p-3 d-flex flex-column justify-content-between" style="height: 250px; overflow-y: auto; font-family: 'Poppins', sans-serif;"> <!-- Set a fixed height for the card body, adjust as needed -->
                               <div>
                                   <h2 class="card-title h6 mb-2 text-center" style="font-size: 1.2rem; color: #333333;"><strong><%= hero.name %></strong></h2>
@@ -105,8 +106,7 @@
                                   <p class="card-text text-muted mb-1"><%= number_to_currency(hero.price, unit: '$') %></p>
                               </div>
                               <div>
-                                  <%= link_to "Rent", root_path, class: "rounded-4 btn btn-primary btn-lg px-3 me-sm-2 custom-btn mb-2" %>
-                                  <%= link_to "More Infos", hero_path(hero), class: "rounded-4 btn btn-outline-light btn-lg px-3 mb-2 bg-black text-white" %>
+                                  <%= link_to "Rent", hero_path(hero), class: "rounded-4 btn btn-outline-light btn-lg px-3 mb-2 bg-black text-white" %>
                               </div>
                           </div>
                       </div>
