--- a/app/views/heros/show.html.erb
+++ b/app/views/heros/show.html.erb
@@ -9,6 +9,8 @@
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Bootstrap icons-->
+    <%= stylesheet_link_tag 'https://cdn.jsdelivr.net/npm/flatpickr@4.6.6/dist/flatpickr.min.css' %>
+    <%= javascript_include_tag 'https://cdn.jsdelivr.net/npm/flatpickr@4.6.6/dist/flatpickr.min.js' %>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
 </head>
 <body class="d-flex flex-column h-100 bg-black">
@@ -23,8 +25,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item"><a class="nav-link" href="/heros">Heroes</a></li>
-              <li class="nav-item"><a class="nav-link" href="/">Profile</a></li>
-              <li class="nav-item"><a class="nav-link" href="/">FAQ</a></li>
+              <li class="nav-item"><a class="nav-link" href="/dashboard">Profile</a></li>
               <% if user_signed_in? %>
                 <li class="nav-item"><%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link" %></li>
               <% else %>
@@ -43,40 +44,52 @@
                 <div class="col-lg-8 d-flex justify-content-start"> <!-- Modified line -->
                   <%= link_to "Edit", edit_hero_path, class:"rounded-4 btn btn-outline-light btn-lg px-4 me-sm-3" %>
                   <%= link_to "Delete", hero_path(@hero), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class:"me-sm-3 rounded-4 btn btn-outline-light btn-lg px-4", method: :delete %>
-                  <%= link_to "Back", hero_path, class:"me-sm-3 rounded-4 btn btn-outline-light btn-lg px-4" %>
+                  <%= link_to "Back", heros_path, class:"me-sm-3 rounded-4 btn btn-outline-light btn-lg px-4" %>
                 </div>
               </div>
 
-            <div class="card mt-4 rounded-5">
-              <div class="card-body">
-                <h1 class="card-title display-4 fw-bold"><%= @hero.name %></h1>
-                <div class="col-lg-8 mb-5 mb-lg-0 d-flex justify-content-start">
-                  <%= image_tag "hero#{rand(1..16)}.png", class: "card-img-top rounded-top-5", style: "width: 200px; height: auto;" %>
+              <div class="card mt-4 rounded-5">
+                <div class="card-body d-flex">
+                  <div class="flex-shrink-0 text-center">
+                    <% hero_image_id = @hero.id %>
+                    <%= image_tag "hero#{hero_image_id % 16 + 1}.png", class: "card-img-top rounded-5", alt: "#{@hero.name} Image", style: "width: 150px;" %>
+                  </div>
+                  <div class="flex-grow-1 ms-3">
+                    <h1 class="card-title display-4 fw-bold mb-3"><%= @hero.name %></h1>
+                    <p class="card-text text-muted mb-2"><strong>Description:</strong> <%= @hero.description %></p>
+                    <p class="card-text text-muted mb-2"><strong>Power:</strong> <%= @hero.power %></p>
+                    <p class="card-text text-muted mb-2"><strong>City:</strong> <%= @hero.city %></p>
+                    <p class="card-text text-muted mb-2"><strong>Price:</strong> <%= number_to_currency(@hero.price, unit: '') %></p>
+                  </div>
                 </div>
-                <p class="card-text"><strong>Description:</strong> <%= @hero.description %></p>
-                <p class="card-text"><strong>Power:</strong> <%= @hero.power %></p>
-                <p class="card-text"><strong>City:</strong> <%= @hero.city %></p>
-                <p class="card-text"><strong>Price:</strong> <%= number_to_currency(@hero.price, unit: '') %></p>
               </div>
-            </div>
           </div>
 
-        <div class="container mt-4">
-          <%= simple_form_for [@hero, @booking], class: "mt-4" do |f| %>
-            <div class="row">
-              <div class="col-md-3">
-                <%= f.text_field :start_date, placeholder: "Start Date", class: "form-control" %>
+          <div class="container mt-4">
+            <%= simple_form_for [@hero, @booking], class: "mt-4 " do |f| %>
+              <div class="row">
+                <div class="col-md-3">
+                  <%= f.input :start_date, as: :string, input_html: { class: "form-control", data: { "flatpickr" => true } }, placeholder: "Start Date" %>
+                </div>
+                <div class="col-md-3">
+                  <%= f.input :end_date, as: :string, input_html: { class: "form-control", data: { "flatpickr" => true } }, placeholder: "End Date" %>
+                </div>
+                <div class="col-md-2">
+                  <%= f.submit "Book", class: "btn btn-primary" %>
+                </div>
               </div>
-              <div class="col-md-3">
-                <%= f.text_field :end_date, placeholder: "End Date", class: "form-control" %>
-              </div>
-              <div class="col-md-2">
-                <%= f.submit "Book", class: "btn btn-primary" %>
-              </div>
-            </div>
-          <% end %>
-        </div>
-      </section>
+            <% end %>
+          </div>
+
+          <script>
+            document.addEventListener('DOMContentLoaded', function() {
+              flatpickr('[data-flatpickr]', {
+                dateFormat: 'Y-m-d',
+                minDate: 'today',
+              });
+            });
+          </script>
+        </section>
 
     </main>
 </body>
