--- a/app/views/heros/show.html.erb
+++ b/app/views/heros/show.html.erb
@@ -27,9 +27,9 @@
               <li class="nav-item"><a class="nav-link" href="/heros">Heroes</a></li>
               <li class="nav-item"><a class="nav-link" href="/dashboard">Profile</a></li>
               <% if user_signed_in? %>
-                <li class="nav-item"><%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link" %></li>
+                <li class="nav-item"><%= button_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link" %></li>
               <% else %>
-                <li class="nav-item"><%= link_to "Login", new_user_session_path, class: "nav-link" %></li>
+                <li class="nav-item"><%= button_to "Login", new_user_session_path, class: "nav-link" %></li>
               <% end %>
             </ul>
                 </div>
