--- a/app/views/heros/show.html.erb
+++ b/app/views/heros/show.html.erb
@@ -42,9 +42,9 @@
           <div class="row gx-5">
               <div class="col-lg-4 mb-5 mb-lg-0">
                 <div class="col-lg-8 d-flex justify-content-start"> <!-- Modified line -->
-                <% if current_user.id == @hero.user_id%>
-                  <%= link_to "Edit", edit_hero_path, class:"rounded-4 btn btn-outline-light btn-lg px-4 me-sm-3" %>
-                  <%= link_to "Delete", hero_path(@hero), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class:"me-sm-3 rounded-4 btn btn-outline-light btn-lg px-4", method: :delete %>
+                    <% if current_user.id == @hero&.user_id %>
+                      <%= link_to "Edit", edit_hero_path(@hero), class: "rounded-4 btn btn-outline-light btn-lg px-4 me-sm-3" %>
+                      <%= link_to "Delete", hero_path(@hero), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "me-sm-3 rounded-4 btn btn-outline-light btn-lg px-4", method: :delete %>
                     <% end %>
                     <%= link_to "Back", heros_path, class:"me-sm-3 rounded-4 btn btn-outline-light btn-lg px-4" %>
                 </div>
@@ -54,7 +54,7 @@
                 <div class="card-body d-flex">
                   <div class="flex-shrink-0 text-center">
                     <% if @hero.image.attached? %>
-                      <%= image_tag hero.image, class: "card-img rounded-5", style: "width: 150px;", alt: "#{@hero.name} Image" %>
+                      <%= image_tag @hero.image, class: "card-img rounded-5", style: "width: 150px;", alt: "#{@hero.name} Image" %>
                     <% else %>
                       <% hero_image_id = @hero.id %>
                       <%= image_tag "hero#{hero_image_id % 16 + 1}.png", class: "card-img rounded-5", style: "width: 150px;", alt: "#{@hero.name} Image" %>
@@ -69,32 +69,50 @@
                   </div>
                 </div>
               </div>
-          </div>
 
-          <div class="container mt-4">
-            <%= simple_form_for [@hero, @booking], class: "mt-4 " do |f| %>
-              <div class="row">
-                <div class="col-md-3">
-                  <%= f.input :start_date, as: :string, input_html: { class: "form-control", data: { "flatpickr" => true } }, placeholder: "Start Date" %>
-                </div>
-                <div class="col-md-3">
-                  <%= f.input :end_date, as: :string, input_html: { class: "form-control", data: { "flatpickr" => true } }, placeholder: "End Date" %>
-                </div>
-                <div class="col-md-2">
-                  <%= f.submit "Book", class: "btn btn-primary" %>
+              <div class="container">
+                <%= simple_form_for [@hero, @booking] do |f| %>
+                  <div class="row justify-content-start">
+                    <div class="col-md-3">
+                      <%= f.input :start_date, as: :string, input_html: { class: "form-control rounded-5", data: { "flatpickr" => true } }, placeholder: "Start Date" %>
+                    </div>
+                    <div class="col-md-3">
+                      <%= f.input :end_date, as: :string, input_html: { class: "form-control rounded-5", data: { "flatpickr" => true } }, placeholder: "End Date" %>
+                    </div>
+                    <div class="row col-md-2 mt-3">
+                      <%= f.submit "Book", class: "rounded-4 btn btn-outline-light btn-lg px-3 mb-2 bg-black text-white" %>
+                    </div>
+                  </div>
+                <% end %>
+              </div>
+
+              <script>
+                document.addEventListener('DOMContentLoaded', function() {
+                  flatpickr("[data-flatpickr]", {
+                  });
+                });
+              </script>
+                        
+          <!-- Reviews Section -->
+          <div class="mt-5">
+            <!-- Form for adding a new review -->
+            <%= render 'reviews/new', hero: @hero %>
+              
+            <h2 class="text-white">Reviews</h2>
+            <% if @hero.reviews.any? %>
+            <% @hero.reviews.each do |review| %>
+              <div class="card rounded-4 mt-4">
+                <div class="card-body">
+                  <h5 class="card-title"><%= review.rating %>     <i class="bi bi-star-fill"></i></h5>
+                  <p class="card-text"><%= review.review_text %></p>
                 </div>
               </div>
             <% end %>
+            <% else %>
+              <p class="text-white">No reviews yet.</p>
+            <% end %>
           </div>
-
-          <script>
-            document.addEventListener('DOMContentLoaded', function() {
-              flatpickr('[data-flatpickr]', {
-                dateFormat: 'Y-m-d',
-                minDate: 'today',
-              });
-            });
-          </script>
+        </div>
         </section>
 
     </main>
