--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -31,7 +31,7 @@
               <% else %>
                 <li class="nav-item"><%= button_to "Login", new_user_session_path, class: "nav-link" %></li>
               <% end %>
-            </ul> 
+            </ul>
                 </div>
             </div>
         </nav>
@@ -109,11 +109,11 @@
       </div>
       <div class="booking-actions">
         <% if booking.status == "pending" %>
-          <%= simple_form_for booking do |f| %>
+          <%= simple_form_for(booking) do |f| %>
             <%= f.input :status, as: :hidden, input_html: { value: 'accepted'} %>
             <%= f.submit 'Accept', class: 'btn btn-info' %>
           <% end %>
-          <%= simple_form_for booking do |f| %>
+          <%= simple_form_for(booking) do |f| %>
             <%= f.input :status, as: :hidden, input_html: { value: 'rejected'} %>
             <%= f.submit 'Reject', class: 'btn btn-light' %>
           <% end %>
